--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -62,11 +62,12 @@ jobs:
       with:
         dotnet-version: 7.0.x
 
-    - name: Install Workload MAUI
-      run: dotnet workload install maui --source https://api.nuget.org/v3/index.json
-      
-    - name: Install Workload Android
-      run: dotnet workload install android --source https://api.nuget.org/v3/index.json
+    - name: Install Workload
+      run: |
+        if [ ${{ matrix.runtime }} == "android" ]; then
+            dotnet workload install maui --source https://api.nuget.org/v3/index.json
+            dotnet workload install android --source https://api.nuget.org/v3/index.json
+        fi
 
     - name: Restore
       run: dotnet restore
