--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -26,13 +26,13 @@ jobs:
         include:
           - platform: "windows-latest"
             runtime: "win-x64"
-            tmp: "C:\\Users\\runner\\AppData\\Local\\Temp\\"
-            publish: ImageConverter.win-x64.tgz
-            upload: ImageConverter.win-x64.tgz
+            tmp: "C:/Users/runner/AppData/Local/Temp/"
+            publish: ImageConverter.win-x64.tar.gz
+            upload: ImageConverter.win-x64.tar.gz
 
           - platform: "windows-latest"
             runtime: "android-arm64"
-            tmp: "C:\\Users\\runner\\AppData\\Local\\Temp\\"
+            tmp: "C:/Users/runner/AppData/Local/Temp/"
             publish: ImageConverter.apk
             upload: ImageConverter.apk
 
@@ -81,7 +81,7 @@ jobs:
             dotnet publish ./src/ImageConverterApp.Android/ -c release -p:Version=${{ env.VERSION }} -r ${{ matrix.runtime }} -o ${{ matrix.tmp }}${{ matrix.runtime }}/
         else
             dotnet publish ./src/ImageConverterApp.Desktop/ -c release -p:Version=${{ env.VERSION }} -r ${{ matrix.runtime }} -o ${{ matrix.tmp }}${{ matrix.runtime }}/files/
-            tar -czf ${{ matrix.tmp }}${{ matrix.runtime }}/${{ matrix.publish }} ${{ matrix.tmp }}${{ matrix.runtime }}/files/
+            tar -czvf ${{ matrix.tmp }}${{ matrix.runtime }}/${{ matrix.publish }} ${{ matrix.tmp }}${{ matrix.runtime }}/files/
         fi
         ls -l ${{ matrix.tmp }}${{ matrix.runtime }}/${{ matrix.publish }}
            
