--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -33,8 +33,8 @@ jobs:
             runtime: "android-arm64"
             tmp: "C:/Users/runner/AppData/Local/Temp/"
             app_version: 1
-            app_id: com.github.EX-EXE.ImageConverterApp
-            publish: com.github.EX-EXE.ImageConverterApp-Signed.apk
+            app_id: com.github.EX_EXE.ImageConverterApp
+            publish: com.github.EX_EXE.ImageConverterApp-Signed.apk
             upload: ImageConverter.apk
 
           #- platform: "macos-latest"
